# farmer

./: .gitignore  HACKING.md  README.md  farmer-reporter.service  farmer-server.service  farmer.py  pyproject.toml  requirements.txt  slack-app-manifest.yaml  start.sh
.github/workflows/: snyk-test.yml
examples/: bsub.sh  nextflow.nf
src/: post-exec.sh
src/farmer/: farmer.py  reporter.py  server.py
src/farmer/common/: __init__.py  barrier.py
src/farmer/reporter/: __init__.py
src/farmer/server/: __init__.py  messaging.py
