[project]
name = "farmer"
version = "0.1.0"
description = "Slack bot that tells you the status of your LSF jobs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.5",
    "aiorun>=2024.8.1",
    "fastapi-websocket-rpc>=0.1.27",
    "fastapi>=0.114.0",
    "slack-bolt==1.20.0",
    "uvicorn>=0.30.6",
]
license.text = "AGPL-3.0-or-later"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[project.scripts]
farmer-reporter = "farmer.reporter:main"
farmer-server = "farmer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
