[project]
name = "farmer"
version = "24.285"
description = "Slack bot that tells you the status of your LSF jobs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.5",
    "aiorun>=2024.8.1",
    "fastapi-websocket-rpc>=0.1.27",
    "fastapi>=0.114.0",
    "pydantic>=2.9.1",
    "python-dotenv>=1.0.1",
    "slack-bolt==1.20.0",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.30.6",
]
license.text = "AGPL-3.0-or-later"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[project.scripts]
farmer-reporter = "farmer.reporter:main"
farmer-server = "farmer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
fastapi-websocket-rpc = { git = "https://github.com/cellgeni/fastapi_websocket_rpc", branch = "develop" }
